--- a/delilah_Resto_Project/project/package.json
+++ b/delilah_Resto_Project/project/package.json
@@ -11,8 +11,11 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "bcryptjs": "^2.4.3",
     "body-parser": "^1.19.0",
+    "dotenv": "^8.2.0",
     "express": "^4.17.1",
+    "http-status-codes": "^1.4.0",
     "jsonwebtoken": "^8.5.1",
     "moment": "^2.27.0",
     "mysql2": "^2.1.0",
